Update .gitignore to include additional file types and remove init.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 *.parquet
 mlruns
+mlartifacts
+*.db
+*.sqlite
+*.csv
+*.json
+*.log
+*.tmp
+*yml
+*.pkl
 00-data*
+02-experiment-tracking/Experiment Tracking - MLOps Zoomcamp.pdf
